--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=https://090fd67d-7a7d-4825-ae2a-30242f833383.preview.emergentagent.com
