--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,10 @@
     },
     {
       "src": "api/index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb"
+      }
     }
   ],
   "routes": [
@@ -32,11 +35,6 @@
     "MONGO_URL": "@mongo_url",
     "DB_NAME": "@db_name",
     "SECRET_KEY": "@secret_key"
-  },
-  "functions": {
-    "api/index.py": {
-      "maxDuration": 10
-    }
   },
   "regions": ["iad1"]
 }
