--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 WDS_SOCKET_PORT=443
-REACT_APP_BACKEND_URL=https://1c10baa9-de6d-4264-9e7b-4cf6bf6e789a.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://your-vercel-url.vercel.app
